ENTREGA_P3_OPCIONAL_CODIGO_INTERMEDIO/P3_OPCIONAL_MARCO_GARCIA_PABLO_ROIG/tests/valid/03_int_to_float_conversion.lava
float x = 5;
int a = 10;
float b = a;
float c = a + 3.5;
