ENTREGA_P3_OPCIONAL_CODIGO_INTERMEDIO/P3_OPCIONAL_MARCO_GARCIA_PABLO_ROIG/tests/invalid/04_arithmetic_on_boolean.lava
boolean a = true;
int b = a + 1;
